# cfds

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  main.cpp
include/: DenseSetTraits.hpp  Meta.hpp  SmallDenseSet.hpp  SmallVector.hpp  Utility.hpp
include/cfds/: dense_set_traits.hpp  meta.hpp  small_dense_set.hpp  small_vector.hpp  split_buffer.hpp  static_buffer.hpp  utility.hpp
include/cfds/detail/: static_buffer.hpp
test/: CMakeLists.txt  main.cpp  test.cpp  traits.cpp  utility.cpp
